--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.0.0",
+    "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "daisyui": "^2.37.0",
+    "@heroicons/react": "^2.0.12"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
