--- a/package.json
+++ b/package.json
@@ -3,19 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 3001",
+    "lint": "next lint",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
-    "next": "13.0.2",
+    "@apollo/client": "^3.7.1",
+    "@heroicons/react": "^2.0.12",
+    "daisyui": "^2.37.0",
+    "graphql": "^16.6.0",
+    "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "daisyui": "^2.37.0",
-    "@heroicons/react": "^2.0.12"
+    "react-markdown": "^8.0.4",
+    "rehype-raw": "^6.1.1",
+    "date-fns": "^2.11.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.13.11",
+    "@graphql-codegen/client-preset": "^1.1.3",
+    "@graphql-codegen/near-operation-file-preset": "^2.4.4",
+    "@graphql-codegen/typed-document-node": "^2.3.6",
+    "@graphql-codegen/typescript": "^2.8.1",
+    "@graphql-codegen/typescript-operations": "^2.5.6",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.6",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
