--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "next start -p 3000",
     "lint": "next lint",
     "generate": "graphql-codegen"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.1",
+    "@apollo/client": "^3.7.2",
+    "@apollo/react-hooks": "4.0.0",
     "@heroicons/react": "^2.0.12",
     "daisyui": "^2.37.0",
     "graphql": "^16.6.0",
@@ -19,7 +20,9 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
     "rehype-raw": "^6.1.1",
-    "date-fns": "^2.11.1"
+    "date-fns": "^2.11.1",
+    "jwt-decode": "^3.1.2",
+    "react-helmet-async": "^1.3.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.11",
