--- a/package.json
+++ b/package.json
@@ -14,24 +14,25 @@
     "@apollo/react-hooks": "4.0.0",
     "@heroicons/react": "^2.0.12",
     "daisyui": "^2.37.0",
+    "date-fns": "^2.11.1",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-markdown": "^8.0.4",
     "rehype-raw": "^6.1.1",
-    "date-fns": "^2.11.1",
-    "jwt-decode": "^3.1.2",
-    "react-helmet-async": "^1.3.0"
+    "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.13.11",
-    "@graphql-codegen/client-preset": "^1.1.3",
+    "@graphql-codegen/cli": "^2.16.1",
+    "@graphql-codegen/client-preset": "^1.2.3",
     "@graphql-codegen/near-operation-file-preset": "^2.4.4",
-    "@graphql-codegen/typed-document-node": "^2.3.6",
-    "@graphql-codegen/typescript": "^2.8.1",
-    "@graphql-codegen/typescript-operations": "^2.5.6",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.6",
+    "@graphql-codegen/typed-document-node": "^2.3.10",
+    "@graphql-codegen/typescript": "^2.8.5",
+    "@graphql-codegen/typescript-operations": "^2.5.10",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
