Downgrade Apollo client to get around an issue
Upon updating to 3.7.9 our use of lazy query with async function broke. In this commit we downgrade to a version that works.

Reference:
https://stackoverflow.com/questions/75242951/domexception-signal-is-aborted-without-reason-in-useeffect-with-async-call

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.9",
+    "@apollo/client": "3.7.3",
     "@apollo/react-hooks": "4.0.0",
     "@heroicons/react": "^2.0.16",
     "daisyui": "^2.51.1",
