--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-markdown": "^8.0.5",
-    "rehype-raw": "^6.1.1",
-    "tw-elements": "^1.0.0-alpha13"
+    "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.1",
