Update to new next.js version

--- a/web/.env.local.template
+++ b/web/.env.local.template
@@ -2,6 +2,7 @@
 GOOGLE_ID=#YOUR_GOOGLE_ID
 GOOGLE_SECRET=#YOUR_GOOGLE_SECRET
 
+NEXT_API_URL=http://localhost:9876/graphql
 NEXT_PUBLIC_UPLOAD_URL=http://localhost:5000/upload
 NEXT_PUBLIC_HOST=localhost
 
