--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,7 @@
     "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
-    "next": "13.4.7",
+    "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -25,6 +25,7 @@
     "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.3.3",
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/client-preset": "^2.1.1",
     "@graphql-codegen/near-operation-file-preset": "^2.5.0",
