Initial changes to use Clerk authentication

--- a/web/.env.local.template
+++ b/web/.env.local.template
@@ -1,6 +1,3 @@
-# Follow instructions on https://developers.google.com/identity to get following id and secret
-GOOGLE_ID=#YOUR_GOOGLE_ID
-GOOGLE_SECRET=#YOUR_GOOGLE_SECRET
 
 NEXT_PUBLIC_API_URL=http://localhost:9876/graphql
 NEXT_PUBLIC_UPLOAD_URL=http://localhost:5000/upload
@@ -10,3 +7,5 @@ NEXT_PUBLIC_APOLLO_CONNECT_TO_DEV_TOOLS=true
 
 NEXT_PUBLIC_ORGANIZATION_NAME="Baithak" # Change this to your organization name
 NEXT_PUBLIC_ORGANIZATION_URL="http://localhost:3000" # Change this to URL of your site
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_...
