--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
@@ -38,6 +38,8 @@
     "@types/node": "18.15.13",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.16",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
