Clean up environment setup

--- a/web/.env.local.template
+++ b/web/.env.local.template
@@ -1,5 +1,3 @@
-
-NEXT_PUBLIC_API_URL=http://localhost:9876/graphql
 NEXT_PUBLIC_UPLOAD_URL=http://localhost:5000/upload
 NEXT_PUBLIC_UPLOAD_DOMAINS=localhost
 
@@ -9,3 +7,9 @@ NEXT_PUBLIC_ORGANIZATION_NAME="Baithak" # Change this to your organization name
 NEXT_PUBLIC_ORGANIZATION_URL="http://localhost:3000" # Change this to URL of your site
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_...
+
+# Build and runtime env
+NEXT_PUBLIC_API_URL=http://localhost:9876/graphql
+
+# Build time env
+UPLOAD_DOMAINS=localhost
