Fix timezone related issues

--- a/web/.env.local.template
+++ b/web/.env.local.template
@@ -5,6 +5,7 @@ NEXT_PUBLIC_APOLLO_CONNECT_TO_DEV_TOOLS=true
 
 NEXT_PUBLIC_ORGANIZATION_NAME="Baithak" # Change this to your organization name
 NEXT_PUBLIC_ORGANIZATION_URL="http://localhost:3000" # Change this to URL of your site
+NEXT_PUBLIC_ORGANIZATION_TIMEZONE="America/Los_Angeles" # Change this to your organization timezone
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_...
 
