--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "@clerk/clerk-react": "^4.28.1",
     "@heroicons/react": "^2.0.18",
     "daisyui": "^3.7.6",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.0.6",
+    "date-fns-tz": "^2.0.0",
     "graphql": "^16.8.1",
     "jwt-decode": "^3.1.2",
     "next": "14.0.4",
