Use next.js image optimization
Use <picture> where we could not specify dimentions to next.js <Image>

--- a/web/.env.local.template
+++ b/web/.env.local.template
@@ -1,4 +1,3 @@
-NEXT_PUBLIC_UPLOAD_URL=http://localhost:5000/upload
 NEXT_PUBLIC_UPLOAD_DOMAINS=localhost
 
 NEXT_PUBLIC_APOLLO_CONNECT_TO_DEV_TOOLS=true
@@ -13,4 +12,7 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_...
 NEXT_PUBLIC_API_URL=http://localhost:9876/graphql
 
 # Build time env
-UPLOAD_DOMAINS=localhost
+NEXT_PUBLIC_UPLOAD_PROTOCOL=http
+NEXT_PUBLIC_UPLOAD_HOST=localhost
+NEXT_PUBLIC_UPLOAD_PORT=5000
+NEXT_PUBLIC_UPLOAD_PATH="/upload"
