--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,8 @@
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-markdown": "^9.0.1",
-    "rehype-raw": "^7.0.0"
+    "rehype-raw": "^7.0.0",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.3.3",
